--- a/style.css
+++ b/style.css
@@ -3,12 +3,26 @@ body {
     font-family: Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 0;
     padding: 0;
+}
+
+h1 {
+    color: white;
+}
+
+ul {
+    margin-top: -10px;
+    list-style-type: decimal;
+    color: white;
+}
+
+li {
+    opacity: 0.8;
 }
 
 .container {
@@ -28,7 +42,7 @@ body {
     border: 5px solid #333;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     display: block;
-    margin: 30px auto;
+    margin: 5px auto;
     background-image: url('/public/space.png');
     background-size: cover;
 }
@@ -116,9 +130,18 @@ button:focus {
     outline: none;
 }
 
+.rumus-container {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+
 #copyright {
     color: white;
     opacity: 0.5;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 600px) {
