--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ li {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     display: block;
     margin: 5px auto;
-    background-image: url('/public/space.png');
+    background-image: url('./public/space.png');
     background-size: cover;
 }
 
