--- a/style.css
+++ b/style.css
@@ -1,158 +1,211 @@
+@import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
-    background-color: #1F2937;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
+  font-family: "Rubik", sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  min-height: 100vh;
+  background: #eeeeee;
 }
 
-h1 {
-    color: white;
-}
-
-ul {
-    margin-top: -10px;
-    list-style-type: decimal;
-    color: white;
-}
-
-li {
-    opacity: 0.8;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.setting {
+  display: flex;
+  flex-direction: column;
 }
 
 .input-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-  
-#canvas {
-    border: 5px solid #333;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    display: block;
-    margin: 5px auto;
-    background-image: url('./public/space.png');
-    background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-#reset-button {
-    display: none;
+.detail-perhitungan-container {
+  background-color: #cccccc;
+  padding-left: 0.2rem;
+  border-radius: 0.5rem;
+  font-size: 0.6rem;
 }
-  
-label {
-    display: inline-block;
-    margin-right: 10px;
-    font-weight: bold;
-    font-size: 16px;
-    color: white;
+
+.detail-perhitungan-container .title {
+  text-align: center;
 }
-  
+
 select {
-    background-color: #1F2937;
-    color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-right: 1rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #5c6664;
+  background-image: none;
+  flex: 1;
+  padding: 0 0.5em;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1em;
+  font-family: "Open Sans", sans-serif;
 }
-  
-option {
-    background-color: #1F2937;
-    color: #fff;
+select::-ms-expand {
+  display: none;
 }
-  
+.select {
+  position: relative;
+  display: flex;
+  width: 20em;
+  height: 3em;
+  line-height: 3;
+  background: #5c6664;
+  overflow: hidden;
+  border-radius: 0.25em;
+}
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: #2b2e2e;
+  cursor: pointer;
+  pointer-events: none;
+  transition: 0.25s all ease;
+}
+.select:hover::after {
+  color: #23b499;
+}
 
-input[type=checkbox] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    vertical-align: middle;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #ccc;
-    border-radius: 50%;
-    outline: none;
-    transition: all 0.3s ease;
-}
-
-input[type=checkbox]:checked {
-    background-color: #333;
-    border-color: #2196F3;
-}
-
-input[type=checkbox]:hover {
-    cursor: pointer;
-    background-color: #f2f2f2;
-}
-
-input[type=checkbox]:checked::before {
-    content: '\2713';
-    display: block;
-    text-align: center;
-    color: #fff;
-    font-size: 14px;
-    margin: auto;
-}
-  
 button {
-    background-color: #2c3e50;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 16px;
-    margin: 10px;
-    padding: 10px 20px;
-    transition: background-color 0.2s ease;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+}
+button.reset-button {
+  font-weight: 600;
+  color: #382b22;
+  text-transform: uppercase;
+  padding: 1.25em 2em;
+  background: #fff0f0;
+  border: 2px solid #b18597;
+  border-radius: 0.75em;
+  transform-style: preserve-3d;
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    background 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+button.reset-button::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f9c4d2;
+  border-radius: inherit;
+  box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+button.reset-button:hover {
+  background: #ffe9e9;
+  transform: translate(0, 0.25em);
+}
+button.reset-button:hover::before {
+  box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
+  transform: translate3d(0, 0.5em, -1em);
+}
+button.reset-button:active {
+  background: #ffe9e9;
+  transform: translate(0em, 0.75em);
+}
+button.reset-button:active::before {
+  box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+  transform: translate3d(0, 0, -1em);
 }
 
-button:hover {
-    background-color: #34495e;
+h1 {
+  text-align: center;
+  text-transform: uppercase;
 }
 
-button:active {
-    background-color: #1f2c38;
+.github-container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
-button:focus {
-    outline: none;
+.github-detail-container {
+  display: flex;
+  gap: 0.5rem;
+  opacity: 0.5;
+}
+
+#github-releases-version-count {
+  opacity: 0.5;
+}
+
+#github-button {
+  color: white;
+  gap: 0.5rem;
+  height: 2rem;
+  border-radius: 0.5rem;
+  background-color: black;
+  width: max-content;
+}
+
+.container {
+  display: flex;
+  padding-top: 1.5rem;
+  justify-content: center;
+  gap: 1rem;
+}
+
+canvas {
+  border: #cccccc solid 5px;
+  border-radius: 0.5rem;
+  position: relative;
 }
 
 .rumus-container {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rumus-container ul {
+  list-style-type: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.rumus-container ul li {
+  background-color: #cccccc;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
 }
 
 #copyright {
-    color: white;
-    opacity: 0.5;
-    font-weight: bold;
+  text-align: center;
+  font-weight: bold;
+  opacity: 0.5;
 }
-
-@media screen and (max-width: 600px) {
-    .input-container {
-        flex-direction: column;
-    }
-    label {
-        font-size: smaller;
-    }
-    #canvas {
-        width: 80vw;
-        margin: 10px auto; /* menyesuaikan margin agar lebih baik pada perangkat dengan layar kecil */
-    }
-}  
