--- a/style/style.css
+++ b/style/style.css
@@ -16,11 +16,23 @@ body {
   justify-content: center;
   margin: 0;
   min-height: 100vh;
-  background: #eeeeee;
+  background-color: #eeeeee;
+  scroll-behavior: smooth;
+}
+
+.dark-mode {
+  background-color: #1e1e1e;
+  color: white;
+}
+
+.dark-container {
+  background-color: #321e1e;
+  color: white;
 }
 
 .setting {
   display: flex;
+  gap: 0.3rem;
   flex-direction: column;
 }
 
@@ -41,6 +53,13 @@ body {
   text-align: center;
 }
 
+#toggle-theme-button {
+  width: max-content;
+  background-color: #1e1e1e;
+  pad: 0.5rem;
+  border-radius: 0.3rem;
+}
+
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -49,19 +68,21 @@ select {
   outline: 0;
   box-shadow: none;
   border: 0 !important;
-  background: #5c6664;
+  background: #cccccc;
   background-image: none;
   flex: 1;
   padding: 0 0.5em;
-  color: #fff;
+  color: #000000;
   cursor: pointer;
   font-size: 1em;
   font-family: "Open Sans", sans-serif;
 }
+
 select::-ms-expand {
   display: none;
 }
-.select {
+
+.select-light {
   position: relative;
   display: flex;
   width: 20em;
@@ -71,19 +92,72 @@ select::-ms-expand {
   overflow: hidden;
   border-radius: 0.25em;
 }
-.select::after {
+
+.select-light::after {
   content: "\25BC";
   position: absolute;
   top: 0;
   right: 0;
   padding: 0 1em;
-  background: #2b2e2e;
+  background: #6d6d6d;
   cursor: pointer;
   pointer-events: none;
   transition: 0.25s all ease;
 }
-.select:hover::after {
-  color: #23b499;
+
+.select-light:hover::after {
+  color: #cccccc;
+}
+
+.select-dark {
+  position: relative;
+  display: flex;
+  width: 20em;
+  height: 3em;
+  line-height: 3;
+  background: #5c6664;
+  overflow: hidden;
+  border-radius: 0.25em;
+}
+
+.select-dark::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: #252526;
+  cursor: pointer;
+  pointer-events: none;
+  transition: 0.25s all ease;
+}
+
+.select-dark:hover::after {
+  color: #5c6664;
+}
+
+.visibality-setting-container {
+  display: flex;
+  gap: 1rem;
+}
+
+#show-flowchart-button {
+  width: fit-content;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+}
+
+#edit-button {
+  display: none;
+}
+#edit-button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+#planet:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 button {
@@ -98,7 +172,7 @@ button {
   font-size: inherit;
   font-family: inherit;
 }
-button.reset-button {
+button.reset-button-light {
   font-weight: 600;
   color: #382b22;
   text-transform: uppercase;
@@ -110,7 +184,8 @@ button.reset-button {
   transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
     background 150ms cubic-bezier(0, 0, 0.58, 1);
 }
-button.reset-button::before {
+
+button.reset-button-light::before {
   position: absolute;
   content: "";
   width: 100%;
@@ -126,20 +201,68 @@ button.reset-button::before {
   transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
     box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
 }
-button.reset-button:hover {
+
+button.reset-button-light:hover {
   background: #ffe9e9;
   transform: translate(0, 0.25em);
 }
-button.reset-button:hover::before {
+button.reset-button-light:hover::before {
   box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
   transform: translate3d(0, 0.5em, -1em);
 }
-button.reset-button:active {
+button.reset-button-light:active {
   background: #ffe9e9;
   transform: translate(0em, 0.75em);
 }
-button.reset-button:active::before {
+button.reset-button-light:active::before {
   box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+  transform: translate3d(0, 0, -1em);
+}
+
+button.reset-button-dark {
+  font-weight: 600;
+  color: white;
+  text-transform: uppercase;
+  padding: 1.25em 2em;
+  background: #3e3e42;
+  border: 2px solid #252526;
+  border-radius: 0.75em;
+  transform-style: preserve-3d;
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    background 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+
+button.reset-button-dark::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #252526;
+  border-radius: inherit;
+  box-shadow: 0 0 0 2px #252526, 0 0.625em 0 0 #2d2d30;
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+}
+
+button.reset-button-dark:hover {
+  background: #37373a;
+  transform: translate(0, 0.25em);
+}
+button.reset-button-dark:hover::before {
+  box-shadow: 0 0 0 2px #252526, 0 0.5em 0 0 #2d2d30;
+  transform: translate3d(0, 0.5em, -1em);
+}
+button.reset-button-dark:active {
+  background: #37373a;
+  transform: translate(0em, 0.75em);
+}
+button.reset-button-dark:active::before {
+  box-shadow: 0 0 0 2px #252526, 0 0 #2d2d30;
   transform: translate3d(0, 0, -1em);
 }
 
@@ -155,6 +278,7 @@ h1 {
 }
 
 .github-detail-container {
+  cursor: pointer;
   display: flex;
   gap: 0.5rem;
   opacity: 0.5;
@@ -164,10 +288,12 @@ h1 {
   opacity: 0.5;
 }
 
-#github-button {
+#github-button, #makalah-button {
+  cursor: pointer;
   color: white;
   gap: 0.5rem;
   height: 2rem;
+  border: 2px solid #b18597;
   border-radius: 0.5rem;
   background-color: black;
   width: max-content;
@@ -186,26 +312,175 @@ canvas {
   position: relative;
 }
 
-.rumus-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.rumus-container ul {
-  list-style-type: none;
-  display: flex;
-  gap: 1rem;
-}
-
-.rumus-container ul li {
-  background-color: #cccccc;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-}
-
 #copyright {
   text-align: center;
   font-weight: bold;
   opacity: 0.5;
+}
+
+#gerak-parabola-href {
+  text-decoration: none;
+  color: white;
+  text-align: center;
+}
+
+#gerak-parabola-href:hover {
+  text-decoration: underline;
+}
+
+#iframe-flowchart {
+  position: absolute;
+  z-index: -100;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.show-iframe {
+  opacity: 1;
+}
+
+#modal-container {
+  position: absolute;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 0.5rem;
+  border: 1px solid white;
+  background-color: #1e1e1e;
+  height: max-content;
+  padding-bottom: 1rem;
+  width: 40vw;
+}
+
+#modal.modal-light  {
+  display: flex;
+  color: black;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 0.5rem;
+  border: 1px solid black;
+  background-color: white;
+  height: max-content;
+  padding-bottom: 1rem;
+  width: 40vw;
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#close-button-modal {
+  position: absolute;
+  width: 10px;
+  top: 0.5rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+input[type="number"] {
+  /* Gaya umum */
+  padding: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  outline: none;
+
+  /* Gaya spesifik untuk tipe "number" */
+  width: 150px; /* Sesuaikan dengan lebar yang diinginkan */
+  height: 30px; /* Sesuaikan dengan tinggi yang diinginkan */
+}
+
+/* Gaya saat input "number" mendapatkan fokus */
+input[type="number"]:focus {
+  border-color: #4d90fe; /* Misalnya, ubah warna border saat mendapatkan fokus */
+  box-shadow: 0 0 5px rgba(77, 144, 254, 0.5); /* Misalnya, tambahkan efek shadow saat mendapatkan fokus */
+}
+
+/* Gaya saat input "number" bernilai tidak valid */
+input[type="number"]:invalid {
+  border-color: red; /* Misalnya, ubah warna border saat bernilai tidak valid */
+}
+
+input[type="color"] {
+  appearance: none;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+#color-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100px;
+  height: 100px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+#color-input::-webkit-color-swatch {
+  border-radius: 15px;
+  border: none;
+}
+#color-input::-moz-color-swatch {
+  border-radius: 15px;
+  border: none;
+}
+
+#flowchart-detail {
+  width: 80vw;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#flowchart-detail h2 {
+  align-self: center;
+}
+
+.hljs {
+  border-radius: 0.5rem;
+}
+
+#scroll-to-top-button {
+  position: fixed;
+  right: 2rem;
+  bottom: 1rem;
+  display: none;
+  width: max-content;
+  border-radius: 1rem;
+  z-index: 99999;
+}
+
+ol li {
+  cursor: pointer;
+}
+
+ol li:hover {
+  text-decoration: underline;
 }
